--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - Vendoo</title>
+<title>Criar Conta</title>
 <style>
 :root{
   --accent:#0077cc;
@@ -27,14 +27,29 @@ body{
   border-radius: 12px;
   box-shadow: 0 8px 30px rgba(11,23,39,0.08);
   width: 100%;
-  max-width: 270px;
-  text-align:center;
+  max-width: 320px;
 }
 h2{
   margin-top:0;
   margin-bottom:16px;
   font-size:20px;
   color: var(--text);
+  text-align:center;
+}
+label{
+  display:block;
+  margin-bottom:6px;
+  font-weight:600;
+  font-size:13px;
+  color: var(--text);
+}
+input[type="text"], input[type="email"], input[type="password"]{
+  width:95%;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #e6e9ef;
+  margin-bottom:12px;
+  font-size:14px;
 }
 .btn{
   display:block;
@@ -47,7 +62,7 @@ h2{
   border-radius:12px;
   cursor:pointer;
   font-size:16px;
-  margin:8px 0;
+  margin-top:8px;
 }
 .bottom-text{
   text-align:center;
@@ -66,47 +81,53 @@ h2{
 <body>
 
 <div class="card">
-  <h2>Login</h2>
-  
-  <!-- Botão login com Google -->
-  <button id="googleLogin" class="btn">Login com Google</button>
-  
+  <h2>Criar Conta</h2>
+  <form id="signupForm">
+    <label for="name">Nome completo</label>
+    <input type="text" id="name" placeholder="Seu nome" required>
+
+    <label for="email">E-mail</label>
+    <input type="email" id="email" placeholder="Seu email" required>
+
+    <label for="password">Senha</label>
+    <input type="password" id="password" placeholder="Escolha uma senha" required>
+
+    <button type="submit" class="btn">Criar Conta com Google</button>
+  </form>
+
   <div class="bottom-text">
-    Não tem conta? <a href="index.html">Criar conta</a>
+    Já tem uma conta? <a href="login.html">Entrar</a>
   </div>
 </div>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
-  // Configuração do Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
-    authDomain: "xavamoz.firebaseapp.com",
-    projectId: "xavamoz",
-    storageBucket: "xavamoz.firebasestorage.app",
-    messagingSenderId: "681441008756",
-    appId: "1:681441008756:web:433985ef3f374672b78521"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
+  authDomain: "xavamoz.firebaseapp.com",
+  projectId: "xavamoz",
+  storageBucket: "xavamoz.firebasestorage.app",
+  messagingSenderId: "681441008756",
+  appId: "1:681441008756:web:433985ef3f374672b78521"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const provider = new GoogleAuthProvider();
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const provider = new GoogleAuthProvider();
 
-  // Botão de login
-  const googleBtn = document.getElementById("googleLogin");
-  googleBtn.addEventListener("click", async () => {
-    try {
-      const result = await signInWithPopup(auth, provider);
-      const user = result.user;
-      console.log("Usuário autenticado:", user.email);
-      window.location.href = "dashboard.html"; // Redireciona para dashboard
-    } catch (error) {
-      console.error(error);
-      alert("Erro ao fazer login com Google: " + error.message);
-    }
-  });
+const form = document.getElementById("signupForm");
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  try {
+    const result = await signInWithPopup(auth, provider);
+    // Usuário autenticado via Google
+    window.location.href = "dashboard.html";
+  } catch(error){
+    alert(error.message);
+  }
+});
 </script>
 
 </body>
