--- a/login.html
+++ b/login.html
@@ -1,83 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login</title>
-<style>
-/* Mesma estilização da index.html */
-:root{
-  --accent:#0077cc;
-  --bg:#f6f8fb;
-  --card:#ffffff;
-  --text:#0f172a;
-  --muted:#6b7280;
-}
-body{
-  margin:0;
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-  background: var(--bg);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-}
-.card{
-  background: var(--card);
-  padding: 24px;
-  border-radius: 12px;
-  box-shadow: 0 8px 30px rgba(11,23,39,0.08);
-  width: 100%;
-  max-width: 300px;
-}
-h2{
-  margin-top:0;
-  margin-bottom:16px;
-  font-size:20px;
-  color: var(--text);
-  text-align:center;
-}
-label{
-  display:block;
-  margin-bottom:6px;
-  font-weight:600;
-  font-size:13px;
-  color: var(--text);
-}
-input[type="email"], input[type="password"]{
-  width:95%;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #e6e9ef;
-  margin-bottom:12px;
-  font-size:14px;
-}
-.btn{
-  display:block;
-  width:100%;
-  padding:14px;
-  background: var(--accent);
-  color:#fff;
-  font-weight:600;
-  border:none;
-  border-radius:12px;
-  cursor:pointer;
-  font-size:16px;
-  margin-top:8px;
-}
-.bottom-text{
-  text-align:center;
-  margin-top:16px;
-  font-size:14px;
-  color: var(--muted);
-}
-.bottom-text a{
-  color: var(--accent);
-  text-decoration:none;
-  font-weight:600;
-  margin-left:4px;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
+  <style>
+    :root{
+      --accent:#0077cc;
+      --bg:#f6f8fb;
+      --card:#ffffff;
+      --text:#0f172a;
+      --muted:#6b7280;
+    }
+    body{
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+      background: var(--bg);
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+    }
+    .card{
+      background: var(--card);
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(11,23,39,0.08);
+      width: 100%;
+      max-width: 270px;
+    }
+    h2{
+      margin-top:0;
+      margin-bottom:16px;
+      font-size:20px;
+      color: var(--text);
+      text-align:center;
+    }
+    label{
+      display:block;
+      margin-bottom:6px;
+      font-weight:600;
+      font-size:13px;
+      color: var(--text);
+    }
+    input[type="email"], input[type="password"]{
+      width:95%;
+      padding:10px;
+      border-radius:8px;
+      border:1px solid #e6e9ef;
+      margin-bottom:12px;
+      font-size:14px;
+    }
+    .btn{
+      display:block;
+      width:100%;
+      padding:14px;
+      background: var(--accent);
+      color:#fff;
+      font-weight:600;
+      border:none;
+      border-radius:12px;
+      cursor:pointer;
+      font-size:16px;
+      margin-top:8px;
+    }
+    .btn:disabled{
+      opacity:0.5;
+      cursor:not-allowed;
+    }
+    .bottom-text{
+      text-align:center;
+      margin-top:16px;
+      font-size:14px;
+      color: var(--muted);
+    }
+    .bottom-text a{
+      color: var(--accent);
+      text-decoration:none;
+      font-weight:600;
+      margin-left:4px;
+    }
+  </style>
 </head>
 <body>
 
@@ -121,13 +124,20 @@ input[type="email"], input[type="password"]{
 
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
+
+    const email = emailEl.value.trim();
+    const password = passwordEl.value.trim();
+
     try {
-      const userCredential = await signInWithEmailAndPassword(auth, emailEl.value, passwordEl.value);
+      const userCredential = await signInWithEmailAndPassword(auth, email, password);
+
+      // Verifica se o email está confirmado
       if(userCredential.user.emailVerified){
-        window.location.href = "dashboard.html";
+        window.location.href = "dashboard.html"; // Redireciona para dashboard
       } else {
-        alert("Verifique seu e-mail antes de entrar!");
+        alert("Email não verificado! Por favor, abra seu email e confirme a conta.");
       }
+
     } catch (error) {
       alert(error.message);
     }
